# rusty-arb

./: .env.example  .gitignore  Cargo.toml  config.example.toml
examples/: test_arbitrage_execution.rs  test_hyperliquid_order.rs  test_univ3_swap.rs
src/: config.rs  engine.rs  execution.rs  lib.rs  main.rs  types.rs
src/collectors/: hyperliquid.rs  mod.rs  uniswapv3.rs
src/executors/: arbitrage.rs  hyperliquid.rs  mod.rs  univ3.rs
src/strategies/: hype_usdc_cross_arbitrage.rs  mod.rs
