[package]
name = "rustyarb"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy = { version = "1.0.38", features = ["full", "rpc-client"] }
amms = "0.7.4"
anyhow = "1.0.100"
async-trait = "0.1.89"
eyre = "0.6"
tokio = { version = "1.47.1", features = ["full"] }
tokio-stream = "0.1.17"
tracing = "0.1.41"
tracing-subscriber = "0.3"
